--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <h1>NOMBRE:</h1>
     <H2>Victor Julian Niño Vargas</H2>
     <H1>PROGRAMA:</H1>
+    <h2>Ingenieria De Sistemas</h2>
     <H1>FECHA DE CREACION:</H1>
+    <h2>04 De Septiembre de 2020</h2>
     <H1>CONTACTO:</H1>
+    <h2>Celular:3128180937</h2>
+    <h2>Skipe:vjnv1994</h2>
+    <h2>Email: vjnv1994@gmail.com</h2>  
 </body>
 </html>
