--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <h1>NOMBRE:</h1>
-    <H2>Victor Julian Niño Vargas</H2>
+    <d1>Victor Julian Niño Vargas</d1>
     <H1>PROGRAMA:</H1>
-    <h2>Ingenieria De Sistemas</h2>
+    <d1>Ingenieria De Sistemas</d1>
     <H1>FECHA DE CREACION:</H1>
-    <h2>04 De Septiembre de 2020</h2>
+    <d1>04 De Septiembre de 2020</d1>
     <H1>CONTACTO:</H1>
-    <h2>Celular:3128180937</h2>
-    <h2>Skipe:vjnv1994</h2>
-    <h2>Email: vjnv1994@gmail.com</h2>  
+    <d1>Celular:3128180937</d1>
+    <d1>Skipe:vjnv1994</d1>
+    <d1>Email: vjnv1994@gmail.com</d1>  
 </body>
 </html>
