--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <H1>FECHA DE CREACION:</H1>
     <d1>04 De Septiembre de 2020</d1>
     <H1>CONTACTO:</H1>
-    <d1>Celular:3128180937</d1>
+    <D1>Celular:3128180937</d1>
     <d1>Skipe:vjnv1994</d1>
     <d1>Email: vjnv1994@gmail.com</d1>  
+
 </body>
 </html>
