Configura_listado_contacto

--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
 </head>
 <body>
     <h1>NOMBRE:</h1>
-    <d1>Victor Julian Niño Vargas</d1>
+    <p>Victor Julian Niño Vargas</p>
     <H1>PROGRAMA:</H1>
-    <d1>Ingenieria De Sistemas</d1>
+    <p>Ingenieria De Sistemas</p>
     <H1>FECHA DE CREACION:</H1>
-    <d1>04 De Septiembre de 2020</d1>
+    <p>04 De Septiembre de 2020</p>
     <H1>CONTACTO:</H1>
-    <D1>Celular:3128180937</d1>
-    <d1>Skipe:vjnv1994</d1>
-    <d1>Email: vjnv1994@gmail.com</d1>  
-
+    <p>
+        <ul>
+    <li>Celular:3128180937</li>
+    <li>Skipe:vjnv1994</li>
+    <li>Email: vjnv1994@gmail.com</li>  
+</ul>
+</p>
 </body>
 </html>
+
