Configuración de enlace plannin en index

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <li>Email: vjnv1994@gmail.com</li>  
 </ul>
 </p>
+
+<h2>Actividad 2:</h2>
+<ul>
+<li><h2><a href="planning.html">Planning</a></h2></li>
+</ul>
 </body>
 </html>
 
