--- a/planning.html
+++ b/planning.html
@@ -23,5 +23,7 @@
 <li><a href="https://developer.mozilla.org/es/docs/Web/CSS/display" target=”_blank”> La propiedad CSS display - Texto</a></li>
 <li><a href="https://www.youtube.com/watch?v=DU9kY8kOu4s" target=”_blank”> Entendiendo los modos de visualización de elementos en CSS - Video</a> </li>
 </ul>
+<h2>Maquetación</h2>
+<img src="mockup_victor_niño.png" alt="Maquetación.">
 </body>
 </html>
