--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>NOMBRE:</h2>
+    <img src="Logo_dW.png" alt="Logo">
+    <h4>NOMBRE:</h4>
     <p>Victor Julian Niño Vargas</p>
-    <H2>PROGRAMA:</H2>
+    <H4>PROGRAMA:</H4>
     <p>Ingenieria De Sistemas</p>
-    <H2>FECHA DE CREACION:</H2>
+    <H4>FECHA DE CREACION:</H4>
     <p>04 De Septiembre de 2020</p>
-    <H2>CONTACTO:</H2>
+    <H4>CONTACTO:</H4>
     <p>
         <ul>
     <li>Celular:3128180937</li>
