--- a/planning.html
+++ b/planning.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <img src="Logo_dW.png" alt="Logo">
     <h2>Objetivos Generales:</h2>
 <p>Crear pagina web con tematica de estudio referente 
  a las propiedades basicas de de CSS.
