correccion_materiales_planning

--- a/planning.html
+++ b/planning.html
@@ -18,7 +18,7 @@
 <li>Conocer las propiedades de CSS display: inline, block, inline-block. </li>
 <li>Aprender a estructurar contenido en CSS. </li>
 </ul>
-<h2>Contenido de la pagina Web:</h2>
+<h2>Materiales:</h2>
 <ul>
  <li><a href="https://uniwebsidad.com/libros/css/capitulo-1#:~:text=CSS%20es%20un%20lenguaje%20de,para%20crear%20p%C3%A1ginas%20web%20complejas."  target=”_blank”> Introducción CSS - Texto</a></li>   
 <li><a href="https://developer.mozilla.org/es/docs/Web/CSS/display" target=”_blank”> La propiedad CSS display - Texto</a></li>
