--- a/planning.html
+++ b/planning.html
@@ -24,6 +24,15 @@
 <li><a href="https://developer.mozilla.org/es/docs/Web/CSS/display" target=”_blank”> La propiedad CSS display - Texto</a></li>
 <li><a href="https://www.youtube.com/watch?v=DU9kY8kOu4s" target=”_blank”> Entendiendo los modos de visualización de elementos en CSS - Video</a> </li>
 </ul>
+<h2>Contenido:</h2>
+<h3>Capitulo 1.</h3>
+<h4>¿Qué es CSS?</h4>
+<p align="justify">
+    CSS es un lenguaje de hojas de estilos creado para controlar el aspecto o presentación de los documentos electrónicos definidos con HTML y XHTML. CSS es la mejor forma de separar los contenidos y su presentación y es imprescindible para crear páginas web complejas.
+    Separar la definición de los contenidos y la definición de su aspecto presenta numerosas ventajas, ya que obliga a crear documentos HTML/XHTML bien definidos y con significado completo (también llamados "documentos semánticos"). Además, mejora la accesibilidad del documento, reduce la complejidad de su mantenimiento y permite visualizar el mismo documento en infinidad de dispositivos diferentes.
+    Al crear una página web, se utiliza en primer lugar el lenguaje HTML/XHTML para marcar los contenidos, es decir, para designar la función de cada elemento dentro de la página: párrafo, titular, texto destacado, tabla, lista de elementos, etc.
+    Una vez creados los contenidos, se utiliza el lenguaje CSS para definir el aspecto de cada elemento: color, tamaño y tipo de letra del texto, separación horizontal y vertical entre elementos, posición de cada elemento dentro de la página, etc.
+</p>
 <h2>Maquetación</h2>
 <img src="mockup_victor_niño.png" alt="Maquetación.">
 </body>
