--- a/planning.html
+++ b/planning.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    
     <img src="Logo_dW.png" alt="Logo">
     <h2>Objetivos Generales:</h2>
 <p>Crear pagina web con tematica de estudio referente 
@@ -25,12 +26,12 @@
 <li><a href="https://www.youtube.com/watch?v=DU9kY8kOu4s" target=”_blank”> Entendiendo los modos de visualización de elementos en CSS - Video</a> </li>
 </ul>
 <h2>Contenido:</h2>
-<h3>Capitulo 1.</h3>
+<h3><em> Capitulo 1.</em></h3>
 <h4>¿Qué es CSS?</h4>
 <p align="justify">
     CSS es un lenguaje de hojas de estilos creado para controlar el aspecto o presentación de los documentos electrónicos definidos con HTML y XHTML. CSS es la mejor forma de separar los contenidos y su presentación y es imprescindible para crear páginas web complejas.
     Separar la definición de los contenidos y la definición de su aspecto presenta numerosas ventajas, ya que obliga a crear documentos HTML/XHTML bien definidos y con significado completo (también llamados "documentos semánticos"). Además, mejora la accesibilidad del documento, reduce la complejidad de su mantenimiento y permite visualizar el mismo documento en infinidad de dispositivos diferentes.
-    Al crear una página web, se utiliza en primer lugar el lenguaje HTML/XHTML para marcar los contenidos, es decir, para designar la función de cada elemento dentro de la página: párrafo, titular, texto destacado, tabla, lista de elementos, etc.
+    Al crear una página web, se utiliza en primer lugar el lenguaje <strong> HTML/XHTML</strong> para marcar los contenidos, es decir, para designar la función de cada elemento dentro de la página: párrafo, titular, texto destacado, tabla, lista de elementos, etc.
     Una vez creados los contenidos, se utiliza el lenguaje CSS para definir el aspecto de cada elemento: color, tamaño y tipo de letra del texto, separación horizontal y vertical entre elementos, posición de cada elemento dentro de la página, etc.
 </p>
 <h2>Maquetación</h2>
