--- a/planning.html
+++ b/planning.html
@@ -34,7 +34,20 @@
     Al crear una página web, se utiliza en primer lugar el lenguaje <strong> HTML/XHTML</strong> para marcar los contenidos, es decir, para designar la función de cada elemento dentro de la página: párrafo, titular, texto destacado, tabla, lista de elementos, etc.
     Una vez creados los contenidos, se utiliza el lenguaje CSS para definir el aspecto de cada elemento: color, tamaño y tipo de letra del texto, separación horizontal y vertical entre elementos, posición de cada elemento dentro de la página, etc.
 </p>
-<h2>Maquetación</h2>
+<h3><em> Capitulo 2.</em></h3>
+<h4>Propiedad CSS display:</h4>
+<p align="justify">
+La propiedad CSS display especifica si un elemento es tratado como block or inline element y el diseño usado por sus hijos, como flow layout(Diseño de Flujo), grid(Cuadricula) o flex(Flexible). 
+Formalmente la propiedad display establece los tipos de visualización interna y externa de un elemento. La tipo externa establece la participacion de un elemento en flow layout; la tipo interna establece el layout(Diseño) de los hijos. Algunos valores de display estan totalmente definidos con sus especificaciones propias; por ejemplo el detalle de que pasa cuando display: flex es declarado y definido en la especificacion de Modelo Flexible de Caja(Flexible Box Model specification) de CSS. Vea la siguientes tablas para mas especificaciones individuales.
+Además de los Diferentes Tipos de caja de Visualizacion, el valor de none permite Desactivar la Visualizacion DE UN Elemento; cuando no se utiliza none, todos los elementos descendentes también quedan desactivados. El documento se procesa como si el elemento no existiera en el árbol de documentos.
+</p>
+<p>Video de apoyo:</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/DU9kY8kOu4s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h3><em> Capitulo 3.</em></h3>
+
+
+
+<h2>Maquetación:</h2>
 <img src="mockup_victor_niño.png" alt="Maquetación.">
 </body>
 </html>
