--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <img src="Logo_dW.png" alt="Logo">
-    <h4 style="color: brown;">NOMBRE:</h4>
+    <h4>NOMBRE:</h4>
     <p>Victor Julian Niño Vargas</p>
     <H4>PROGRAMA:</H4>
     <p>Ingenieria De Sistemas</p>
