--- a/autor.html
+++ b/autor.html
@@ -22,7 +22,7 @@
 </ul>
 </p>
 
-<h2>Actividad 2:</h2>
+<h2 style="color: #FF0000;" >Actividad 2:</h2>
 <ul>
 <li><h2><a href="planning.html">Planning</a></h2></li>
 </ul>
