--- a/inicio.html
+++ b/inicio.html
@@ -27,7 +27,7 @@
 <ul>
     <li>Crear paginas web utilizando las propiedades basicas de de CSS. </li>
             </td>
-                <aside colspan="2" width:20%; style="float: left:;" >
+                <aside colspan="2" width:20%; style="float: right;" >
                     <blockquote class="twitter-tweet"><p lang="es" dir="ltr"><a href="https://twitter.com/hashtag/ComunicadoOficial?src=hash&amp;ref_src=twsrc%5Etfw">#ComunicadoOficial</a> Procuraduría revocó sanción impuesta al rector de la UNAD, Jaime Alberto Leal Afanador (<a href="https://twitter.com/JaimeLeal_?ref_src=twsrc%5Etfw">@JaimeLeal_</a> ) y lo absolvió de los cargos investigados.<br><br>Leer más👉🏼 <a href="https://t.co/RvfdJxOH3I">https://t.co/RvfdJxOH3I</a> <a href="https://t.co/cse66bpjtb">pic.twitter.com/cse66bpjtb</a></p>&mdash; Universidad UNAD (@UniversidadUNAD) <a href="https://twitter.com/UniversidadUNAD/status/1320010854277042176?ref_src=twsrc%5Etfw">October 24, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </aside>
             
