--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <img style="width: 30%;" src="Logo.png" alt="Unad">
+    <img style="width: 30%;" src="Logotipounad.png" alt="Unad.">
     <h1 class="titulo"> OVI - PROPIEDADES BASICAS DE CCS  </h1>
     <div class="menu" >
         <nav>
