--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="menu" >
         <nav>
         
-      <li><a href="inicio.html" style="color: white;"> Inicio</a> </li>
+      <li><a href="index.html" style="color: white;"> Inicio</a> </li>
        <li><a href="" style="color: white;">Conceptos</a>
         <ul> <li><a href="conceptos1.html">Conceptos 1</a></li>
         <li><a href="conceptos2.html">Conceptos 2</a></li></ul>
