--- a/autor.html
+++ b/autor.html
@@ -25,11 +25,8 @@
     
 </nav>
     </div>
+    <img style="width: 250px; padding: 20px;" src="fotovjnv.jpg" alt="fotografia">
 
-
-<table class="tablas">
-    <tr>
-        <td>
     <h4>NOMBRE:</h4>
     <p>Victor Julian Niño Vargas</p>
     <H4>PROGRAMA:</H4>
@@ -43,13 +40,8 @@
     <li>Skipe:vjnv1994</li>
     <li>Email: vjnv1994@gmail.com</li>  
 </ul>
-</td>
-<td style="float:right; padding: 50px;">
-    <img style="width: 250px;" src="fotovjnv.jpg" alt="fotografia">
-</td>
-</tr>
 
-</table>
+    
 
 <h2 style="color: #FF0000;" >Actividad 2:</h2>
 <ul>
