--- a/autor.html
+++ b/autor.html
@@ -24,9 +24,10 @@
       <li><a href="autor.html" style="color: white;">Autor</a></li>
     
 </nav>
-    </div>
-    <img style="width: 250px; padding: 20px;" src="fotovjnv.jpg" alt="fotografia">
-
+    </div >
+    <div align="center">
+    <img style="width: 250px; padding: 20px; float: right;" src="fotovjnv.jpg" alt="fotografia" >
+</div>
     <h4>NOMBRE:</h4>
     <p>Victor Julian Niño Vargas</p>
     <H4>PROGRAMA:</H4>
