--- a/autor.html
+++ b/autor.html
@@ -25,7 +25,7 @@
     
 </nav>
     </div >
-    <div align="center">
+    <div>
     <img style="width: 250px; padding: 20px; float: right;" src="fotovjnv.jpg" alt="fotografia" >
 </div>
     <h4>NOMBRE:</h4>
