--- a/conceptos1.html
+++ b/conceptos1.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>conceptos 1</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <h1>MARTHA ROMAN TE AMO</h1>
+
+    <img style="width: 10%;" src="Logotipounad.png" alt="Unad.">
+    <h1 class="titulo"> AUTOR  </h1>
+    <div class="menu" >
+        <nav>
+        
+      <li><a href="index.html" style="color: white;"> Inicio</a> </li>
+       <li><a href="" style="color: white;">Conceptos</a>
+        <ul> <li><a href="conceptos1.html">Conceptos 1</a></li>
+        <li><a href="conceptos2.html">Conceptos 2</a></li></ul>
+        </li>
+      <li> <a href="" style="color: white;">Recursos</a>
+        <ul> <li><a href="recursos1.html">Recurso 1</a></li>
+            <li><a href="recursos2.html">Recurso 2</a></li></ul>
+            </li>
+      <li><a href="" style="color: white;">Autoevaluación</a>
+      <ul> <li><a href=" ">Autoevaluación 1</a></li>
+        <li><a href=" ">Autoevaluación 2</a></li></ul>
+        </li>
+
+      <li><a href="autor.html" style="color: white;">Autor</a></li>
+    
+</nav>
+    </div >
 </body>
 </html>
