--- a/autor.html
+++ b/autor.html
@@ -33,7 +33,7 @@
 </nav>
     </div >
     <div>
-    <img style="width: 250px; padding: 20px; float: right;" src="fotovjnv.jpg" alt="fotografia" >
+    <img style="width: 200px; padding: 20px; float: right; margin-right: 200px;" src="fotovjnv.jpg" alt="fotografia" >
 </div>
     <h4>NOMBRE:</h4>
     <p>Victor Julian Niño Vargas</p>
