--- a/conceptos1.html
+++ b/conceptos1.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>conceptos 1</title>
     <link rel="stylesheet" href="estilos.css">
+   
 </head>
 <body>
 
     <img style="width: 10%;" src="Logotipounad.png" alt="Unad.">
-    <h1 class="titulo"> AUTOR  </h1>
+    <h1 class="titulo"> CONCEPTOS 1  </h1>
     <div class="menu" >
         <nav>
         
@@ -27,9 +28,18 @@
         <li><a href=" ">Autoevaluación 2</a></li></ul>
         </li>
 
-      <li><a href="autor.html" style="color: white;">Autor</a></li>
+      <li><a  href="autor.html" style="color: white;">Autor</a></li>
     
 </nav>
     </div >
+    <a style="float: right; color:#005883 ;" href="conceptos2.html">Siguiente</a>
+    <br>
+<div>
+hola
+hola
+<div style="text-align: right; border: 10px;">
+hola
+</div>
+</div>
 </body>
 </html>
