--- a/conceptos2.html
+++ b/conceptos2.html
@@ -9,7 +9,7 @@
 <body>
 
     <img style="width: 10%;" src="Logotipounad.png" alt="Unad.">
-    <h1 class="titulo"> CONCEPTOS  </h1>
+    <h1 class="titulo"> CONCEPTOS 2 </h1>
     <div class="menu" >
         <nav>
         
@@ -31,5 +31,6 @@
     
 </nav>
     </div >
+    <a style="float: left; color:#005883 ;" href="conceptos1.html">Anterior</a>
 </body>
 </html>
