--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    
+    <div>
     <img style="width: 10%;" src="Logotipounad.png" alt="Unad.">
     <h1 class="titulo"> OVI - PROPIEDADES BASICAS DE CCS  </h1>
     <div class="menu" >
@@ -51,11 +51,12 @@
         </tr>
         
     </table>
-    <br>
-   <div align="center">
-    <aside >
-        <blockquote  class="twitter-tweet"><p lang="es" dir="ltr"><a href="https://twitter.com/hashtag/ComunicadoOficial?src=hash&amp;ref_src=twsrc%5Etfw">#ComunicadoOficial</a> Procuraduría revocó sanción impuesta al rector de la UNAD, Jaime Alberto Leal Afanador (<a href="https://twitter.com/JaimeLeal_?ref_src=twsrc%5Etfw">@JaimeLeal_</a> ) y lo absolvió de los cargos investigados.<br><br>Leer más👉🏼 <a href="https://t.co/RvfdJxOH3I">https://t.co/RvfdJxOH3I</a> <a href="https://t.co/cse66bpjtb">pic.twitter.com/cse66bpjtb</a></p>&mdash; Universidad UNAD (@UniversidadUNAD) <a href="https://twitter.com/UniversidadUNAD/status/1320010854277042176?ref_src=twsrc%5Etfw">October 24, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </aside>
+   
+   <div align="right">
+    <aside style="width: 100px; margin-right: 200px;">
+        <blockquote class="twitter-tweet"><p lang="es" dir="ltr"><a href="https://twitter.com/hashtag/ComunicadoOficial?src=hash&amp;ref_src=twsrc%5Etfw">#ComunicadoOficial</a> Procuraduría revocó sanción impuesta al rector de la UNAD, Jaime Alberto Leal Afanador (<a href="https://twitter.com/JaimeLeal_?ref_src=twsrc%5Etfw">@JaimeLeal_</a> ) y lo absolvió de los cargos investigados.<br><br>Leer más👉🏼 <a href="https://t.co/RvfdJxOH3I">https://t.co/RvfdJxOH3I</a> <a href="https://t.co/cse66bpjtb">pic.twitter.com/cse66bpjtb</a></p>&mdash; Universidad UNAD (@UniversidadUNAD) <a href="https://twitter.com/UniversidadUNAD/status/1320010854277042176?ref_src=twsrc%5Etfw">October 24, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </aside>    
+</div>
 </div>
 </body>
 </html>
