--- a/conceptos2.html
+++ b/conceptos2.html
@@ -32,5 +32,24 @@
 </nav>
     </div >
     <a style="float: left; color:#005883 ;" href="conceptos1.html">Anterior</a>
+<br>
+<br>
+    <div>
+        <h1 class="titulo" style="text-align: left;">Propiedad Display en CSS.</h1>
+        <p>La propiedad CSS display especifica si un elemento es tratado como block or inline element y el diseño usado por sus hijos, como flow layout(Diseño de Flujo), grid(Cuadricula) o flex(Flexible).</p>
+        <p>Formalmente la propiedad display establece los tipos de visualización interna y externa de un elemento. La tipo externa establece la participacion de un elemento en flow layout; la tipo interna establece el layout(Diseño) de los hijos. Algunos valores de display estan totalmente definidos con sus especificaciones propias; por ejemplo el detalle de que pasa cuando display: flex es declarado y definido en la especificacion de Modelo Flexible de Caja(Flexible Box Model specification) de CSS. Vea la siguientes tablas para mas especificaciones individuales.</p>
+        <p>Además de los Diferentes Tipos de caja de Visualizacion, el valor de none permite Desactivar la Visualizacion DE UN Elemento; cuando no se utiliza none, todos los elementos descendentes también quedan desactivados. El documento se procesa como si el elemento no existiera en el árbol de documentos.</p>
+    <br>
+    <h1 class="titulo" style="text-align: left;">Sintaxis.</h1>
+    <p>La propiedad display se especifica mediante valores de palabras clave. Los valores de palabras clave se agrupan en seis categorías:</p>
+    <ul style="padding: 15px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; color: #005883; margin-left: 30px;">
+        <li>display-outside</li>
+        <li>display-inside</li>
+        <li>display-listitem</li>
+        <li>display-internal</li>
+        <li>display-box</li>
+        <li>display-legacy</li> </ul>
+        <p>En la actualidad, es mejor especificar display utilizando una sola palabra clave; aunque las últimas especificaciones permiten combinar algunas palabras clave, esto aún no está bien soportado por los navegadores.</p>
+    </div>
 </body>
 </html>
