--- a/conceptos2.html
+++ b/conceptos2.html
@@ -31,7 +31,7 @@
     
 </nav>
     </div >
-    <a style="float: left; color:#005883 ;" href="conceptos1.html">Anterior</a>
+    <a style="float: left; color:#005883 ; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" href="conceptos1.html">Anterior</a>
 <br>
 <br>
     <div>
@@ -50,6 +50,30 @@
         <li>display-box</li>
         <li>display-legacy</li> </ul>
         <p>En la actualidad, es mejor especificar display utilizando una sola palabra clave; aunque las últimas especificaciones permiten combinar algunas palabras clave, esto aún no está bien soportado por los navegadores.</p>
-    </div>
+        <br>
+        <br>
+        <h2 class="titulo" style="text-align: left;">Display-outside</h2>
+    <p>Estas palabras clave especifican el tipo de pantalla externa del elemento, que es esencialmente su función en el diseño de flujo: A continuación se definen: </p>
+    <img  src="outsite.png" alt="" >
+    <h2 class="titulo" style="text-align: left;">Display-inside</h2>
+    <p>Estas palabras clave especifican el tipo de pantalla interna del elemento, que define el tipo de contexto de formato que establece su contenido (suponiendo que es un elemento no reemplazado). Se definen como sigue:</p>
+    <img  src="outinsite.png" alt="" >   
+    <h2 class="titulo" style="text-align: left;">Display-listitem</h2>
+    <p>El elemento genera un cuadro de bloque para el contenido y un cuadro en línea de elemento de lista independiente.</p>
+    <p>Si no se especifica ningún valor display-inside, el tipo de pantalla interna de la caja principal es el predeterminado flow. Si no se especifica ningún valor display-outside, el tipo de pantalla externa de la caja principal tiene el valor predeterminado block.</p>
+    <h2 class="titulo" style="text-align: left;">Display-internal</h2>
+    <p>Algunos modelos de disposición, como table y ruby, tienen una estructura interna completa, con varios papeles diferentes que sus hijos y descendientes pueden llenar. Esta sección define los valores de visualización "internos", que sólo tienen significado dentro de ese modo de disposición particular.</p>
+    <p>A menos que se especifique lo contrario, el tipo de visualización interno y el tipo de visualización exterior de los elementos que utilizan estos valores de visualización se establecen en la palabra clave dada.</p>
+    <img src="listitem.png" alt="">
+    <h2 class="titulo" style="text-align: left;">Display-box</h2>
+    <p>Estos valores se definen si un elemento genera cuadros de visualización en absoluto. </p>
+    <img src="dbox.png" alt="">
+    <h2 class="titulo" style="text-align: left;">Display-legacy</h2>
+    <p>CSS 2 usó una sintaxis de palabra clave única para la propiedad display, requiriendo palabras clave separadas para variantes de nivel de bloque e inline del mismo modo de disposición. Se definen como sigue: </p>
+    <img src="dlegaly.png" alt="">
+</div>
+    <br>
+    <br>
+    <a style="float: left; color:#005883 ; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" href="conceptos1.html">Anterior</a>
 </body>
 </html>
