--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
         <ul> <li><a href="conceptos1.html">Conceptos 1</a></li>
         <li><a href="conceptos2.html">Conceptos 2</a></li></ul>
         </li>
-      <li> <a href="recursos1.html" style="color: white;">Recursos</a></li>
-      <li><a href="autoevaluacion1.html" style="color: white;">Autoevaluación</a></li>
+      <li> <a href="recursos1.html" style="color: white;">Recursos</a>
+        <ul> <li><a href="recursos1.html">Recursos 1</a></li>
+            <li><a href="recursos2.html">Recursos 2</a></li></ul>
+        </li>
+      <li><a href="autoevaluacion1.html" style="color: white;">Autoevaluación</a>
+        <ul><li> <a href="">Autoevaluación 1</a></li>
+            <li><a href="">Autoevaluación 2</a></li>
+        </ul>
+    </li>
       <li><a href="autor.html" style="color: white;">Autor</a></li>
     
 </nav>
