--- a/conceptos1.html
+++ b/conceptos1.html
@@ -56,8 +56,9 @@
     <p>La adopción de CSS por parte de los navegadores ha requerido un largo periodo de tiempo. El mismo año que se publicó CSS 1, Microsoft lanzaba su navegador Internet Explorer 3.0, que disponía de un soporte bastante reducido de CSS. El primer navegador con soporte completo de CSS 1 fue la versión para Mac de Internet Explorer 5, que se publicó en el año 2000. Por el momento, ningún navegador tiene soporte completo de CSS 2.1.</p>
 
 </div>
-<div align="left" style="margin-right: 50px;">
+<div  style="margin-left: 20px;">
     <img style="width: 300px;" src="imagecss.png" alt="" >
+    <p style="font-family: 'Times New Roman', Times, serif; color: black;"> Estructura Basica Sintaxis CSS [Imagen.] Recuperado de https://www.silocreativo.com/que-es-css/ </p>
     </div>
 <br>
     <div>
@@ -66,6 +67,7 @@
         <p>Internamente los navegadores están divididos en varios componentes. La parte del navegador que se encarga de interpretar el código HTML y CSS para mostrar las páginas se denomina motor. Desde el punto de vista del diseñador CSS, la versión de un motor es mucho más importante que la versión del propio navegador.</p>
         <p>La siguiente tabla muestra el soporte de CSS 1, CSS 2.1 y CSS 3 de los cinco navegadores más utilizados por los usuarios:</p>
         <img  src="soportenavegcss.png" alt="" >
+        <p style="font-family: 'Times New Roman', Times, serif; color: black;"> Ilustación Soporte Navegadores[Tabla.] Recuperado de https://uniwebsidad.com/libros/css/capitulo-1/soporte-de-css-en-los-navegadores </p>
         <p>Los navegadores Firefox, Chrome, Safari y Opera son los más avanzados en el soporte de CSS, ya que incluyen muchos elementos de la futura versión CSS 3 y un soporte casi perfecto de la actual version 2.1.</p>
         <p>Por su parte, el navegador Internet Explorer sólo puede considerarse adecuado desde el punto de vista de CSS a partir de su versión 7. Internet Explorer 6, utilizado todavía por un número no despreciable de usuarios, sufre carencias muy importantes y contiene decenas de errores en su soporte de CSS. Internet Explorer 8 soporta casi todas las propiedades y características de CSS 2.1.</p>
 
