--- a/recursos1.html
+++ b/recursos1.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recursos 1</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <div>
-        <img style="width: 10%;" src="Logotipounad.png" alt="Unad.">
+        <img  style="width: 10%;" src="Logotipounad.png" alt="Unad.">
         <h1 class="titulo"> RECURSOS 1 </h1>
         <div class="menu" >
             <nav>
@@ -31,6 +31,16 @@
         
     </nav>
         </div>
-        <a style="float: right; color:#005883 ;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" href="conceptos2.html">Siguiente</a>
+        <a style="float: right; color:#005883 ;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" href="recursos2.html">Siguiente</a>
+<br>
+<br>
+        <div style="text-align: center;">
+          <h3 class="titulo">Estructura Basica De HTML y CSS3 </h3>
+          <br>
+          <iframe width="800" height="500" src="https://www.youtube.com/embed/ajgKuwJVq-w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <br>
+        <br>
+        <a style="float: right; color:#005883 ;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" href="recursos2.html">Siguiente</a>
 </body>
 </html>
