--- a/recursos2.html
+++ b/recursos2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recursos 2</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
@@ -31,5 +31,6 @@
         
     </nav>
         </div>
+        <a style="float: left; color:#005883 ; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" href="recursos1.html">Anterior</a>
 </body>
 </html>
