--- a/Inicio.html
+++ b/Inicio.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba 1</title>
+    <style> </style>
+
+
 </head>
-<body>
+<body style="background-color: blue;">
     <h1 style="font-family: Arial, Helvetica, sans-serif; color: tomato; text-align: center;">DISEÑOS WEB</h1>
 
 
     <p style="color: violet;">Texto prueba</p>
+
+    <div style="text-align: center;">
+        <img src="Logo_dW.png" alt="Logotipo">
+    </div>
+
+
 
 
 
