--- a/recursos2.html
+++ b/recursos2.html
@@ -32,5 +32,12 @@
     </nav>
         </div>
         <a style="float: left; color:#005883 ; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" href="recursos1.html">Anterior</a>
-</body>
+<div style="text-align: center;">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/MUb6YW_7dCU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+</div>
+<br>
+<br>
+<a style="float: left; color:#005883 ; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" href="recursos1.html">Anterior</a>
+      </body>
 </html>
