--- a/recursos2.html
+++ b/recursos2.html
@@ -31,9 +31,14 @@
         
     </nav>
         </div>
+        <br>
+        <br>
         <a style="float: left; color:#005883 ; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" href="recursos1.html">Anterior</a>
-<div style="text-align: center;">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/MUb6YW_7dCU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div style="text-align: center;">
+          <h3 class="titulo">Estructura Basica De HTML y CSS3 </h3>
+          <br>
+        <div style="text-align: center;">
+  <iframe width="600" height="400" src="https://www.youtube.com/embed/MUb6YW_7dCU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </div>
 <br>
