--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@
             <li><a href="recursos2.html">Recursos 2</a></li></ul>
         </li>
       <li><a href="" style="color: white;">Autoevaluación</a>
-        <ul><li> <a href="">Autoevaluación 1</a></li>
+        <ul><li> <a href="autoevaluacion1.html">Autoevaluación</a></li>
             <li><a href="">Autoevaluación 2</a></li>
         </ul>
     </li>
