--- a/recursos2.html
+++ b/recursos2.html
@@ -23,8 +23,8 @@
                 <li><a href="recursos2.html">Recursos 2</a></li></ul>
             </li>
           <li><a href="autoevaluacion1.html" style="color: white;">Autoevaluación</a>
-            <ul><li> <a href="">Autoevaluación 1</a></li>
-                <li><a href="">Autoevaluación 2</a></li>
+            <ul><li> <a href="autoevaluacion1.html">Autoevaluación 1</a></li>
+                <li><a href="autoevaluacion2.html">Autoevaluación 2</a></li>
             </ul>
         </li>
           <li><a href="autor.html" style="color: white;">Autor</a></li>
