--- a/autoevaluacion1.html
+++ b/autoevaluacion1.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EVALUACION 1</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <div>
