--- a/autoevaluacion1.html
+++ b/autoevaluacion1.html
@@ -32,6 +32,7 @@
     </nav>
         </div>
     <br>
+    <a style="float: left; color:#005883 ; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" href="index.html">Regresar</a>
 <div style="text-align: center;">
     <iframe width="795" height="690" frameborder="0" src="https://es.educaplay.com/juego/7784737-propiedades_basicas_de_ccs.html"></iframe>
 </div>
