--- a/conceptos1.html
+++ b/conceptos1.html
@@ -24,8 +24,8 @@
             <li><a href="recursos2.html">Recurso 2</a></li></ul>
             </li>
       <li><a href="" style="color: white;">Autoevaluación</a>
-      <ul> <li><a href=" ">Autoevaluación 1</a></li>
-        <li><a href=" ">Autoevaluación 2</a></li></ul>
+      <ul> <li><a href="autoevaluacion1.html">Autoevaluación 1</a></li>
+        <li><a href="autoevaluacion2.html">Autoevaluación 2</a></li></ul>
         </li>
 
       <li><a  href="autor.html" style="color: white;">Autor</a></li>
