--- a/autoevaluacion2.html
+++ b/autoevaluacion2.html
@@ -31,8 +31,9 @@
         
     </nav>
         </div>
+<div>
         <a style="float: left; color:#005883 ; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" href="index.html">Regresar</a>
-<iframe width="795" height="690" frameborder="0" src="https://es.educaplay.com/juego/7789733-cuestionario.html"></iframe>
+    </div>
     <br>
 <div style="text-align: center;">
     <iframe width="795" height="690" frameborder="0" src="https://es.educaplay.com/juego/7789733-cuestionario.html"></iframe>
