--- a/evaluacionsitio.html
+++ b/evaluacionsitio.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
+    
 </head>
 <body>
-    <embed src="files/autoevauaciónOVI_Victor_Niño_Vargas.pdf" type="application/pdf"width="100%" height="600px" >
+    <div>
+    <img style="width: 10%;" src="Logotipounad.png" alt="Unad.">
+    <h1 class="titulo"> OVI - PROPIEDADES BASICAS DE CCS  </h1>
+    <div class="menu" >
+        <nav>
+        
+      <li><a href="index.html" style="color: white;"> Inicio</a> </li>
+       <li><a href="" style="color: white;">Conceptos</a>
+        <ul> <li><a href="conceptos1.html">Conceptos 1</a></li>
+        <li><a href="conceptos2.html">Conceptos 2</a></li></ul>
+        </li>
+      <li> <a href="" style="color: white;">Recursos</a>
+        <ul> <li><a href="recursos1.html">Recursos 1</a></li>
+            <li><a href="recursos2.html">Recursos 2</a></li></ul>
+        </li>
+      <li><a href="" style="color: white;">Autoevaluación</a>
+        <ul><li> <a href="autoevaluacion1.html">Autoevaluación 1</a></li>
+            <li><a href="autoevaluacion2.html">Autoevaluación 2</a></li>
+            <li><a href="evaluacionsitio.html">Evaluación Sitio</a></li>
+        </ul>
+    </li>
+    <div>
+    <object data="autoevauaciónOVI_Victor_Niño_Vargas.pdf" type=""></object>
+</div>
 </body>
 </html>
