--- a/evaluacionsitio.html
+++ b/evaluacionsitio.html
@@ -30,7 +30,7 @@
         </ul>
     </li>
     <div>
-    <object data="autoevauaciónOVI_Victor_Niño_Vargas.pdf" type=""></object>
+    <iframe src="autoevauaciónOVI_Victor_Niño_Vargas.pdf" type=""></iframe>
 </div>
 </body>
 </html>
