--- a/evaluacionsitio.html
+++ b/evaluacionsitio.html
@@ -29,8 +29,13 @@
             <li><a href="evaluacionsitio.html">Evaluación Sitio</a></li>
         </ul>
     </li>
-    <div>
-    <iframe src="autoevauaciónOVI_Victor_Niño_Vargas.pdf" type=""></iframe>
+    <li><a href="autor.html" style="color: white;">Autor</a></li>
+  
+</nav>
+  </div>
+    <div style="text-align: center;" with:>
+        <iframe width="800" height="500" src="autoevauaciónOVI_Victor_Niño_Vargas.pdf" frameborder="0" type=""></iframe>
 </div>
+
 </body>
 </html>
