--- a/autor.html
+++ b/autor.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="estilos.css">
     
 </head>
+<footer style="width:100%;  text-align: center;">
+    <div class="container-fluid">
+    <img src="informacioncontactounad.png" alt="Contacto">
+</div>
+</footer>
 <body>
 
     <img style="width: 10%;" src="Logotipounad.png" alt="Unad.">
