--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta Author="Victor Niño Vargas">
+    <meta Description="OVI con tematica de CSS3 y HTML">
+    <meta> 
     <title>OVI DISEÑO WEB</title>
     <link rel="stylesheet" href="estilos.css">
     
 </head>
+
+<footer style="width:100%;  text-align: center;">
+    <div class="container-fluid">
+    <img src="informacioncontactounad.png" alt="Contacto">
+</div>
+</footer>
 <body>
     <div>
     <img style="width: 10%;" src="Logotipounad.png" alt="Unad.">
