--- a/autoevaluacion1.html
+++ b/autoevaluacion1.html
@@ -6,6 +6,11 @@
     <title>EVALUACION 1</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
+<footer style="width:100%;  text-align: center;">
+    <div class="container-fluid">
+    <img src="informacioncontactounad.png" alt="Contacto">
+</div>
+</footer>
 <body>
     <div>
         <img style="width: 10%;" src="Logotipounad.png" alt="Unad.">
