--- a/conceptos1.html
+++ b/conceptos1.html
@@ -12,7 +12,7 @@
     <img src="informacioncontactounad.png" alt="Contacto">
 </div>
 </footer>
-<body>
+<body style="margin-left: 10px;">
 
     <img style="width: 10%;" src="Logotipounad.png" alt="Unad.">
     <h1 class="titulo"> CONCEPTOS 1  </h1>
@@ -62,12 +62,12 @@
     <p>La adopción de CSS por parte de los navegadores ha requerido un largo periodo de tiempo. El mismo año que se publicó CSS 1, Microsoft lanzaba su navegador Internet Explorer 3.0, que disponía de un soporte bastante reducido de CSS. El primer navegador con soporte completo de CSS 1 fue la versión para Mac de Internet Explorer 5, que se publicó en el año 2000. Por el momento, ningún navegador tiene soporte completo de CSS 2.1.</p>
 
 </div>
-<div  style="margin-left: 20px;">
-    <img style="width: 300px;" src="imagecss.png" alt="" >
+<div  style="">
+    <img style="width: 300px; margin-left: 20px;" src="imagecss.png" alt="" >
     <p style="font-family: 'Times New Roman', Times, serif; color: black;"> Estructura Basica Sintaxis CSS [Imagen.] Recuperado de https://www.silocreativo.com/que-es-css/ </p>
     </div>
 <br>
-    <div>
+    <div >
         <h1 class="titulo" style="text-align: left;">Soporte de CSS en los navegadores.</h1>
         <p>El trabajo del diseñador web siempre está limitado por las posibilidades de los navegadores que utilizan los usuarios para acceder a sus páginas. Por este motivo es imprescindible conocer el soporte de CSS en cada uno de los navegadores más utilizados del mercado.</p>
         <p>Internamente los navegadores están divididos en varios componentes. La parte del navegador que se encarga de interpretar el código HTML y CSS para mostrar las páginas se denomina motor. Desde el punto de vista del diseñador CSS, la versión de un motor es mucho más importante que la versión del propio navegador.</p>
