--- a/conceptos1.html
+++ b/conceptos1.html
@@ -62,7 +62,7 @@
     <p>La adopción de CSS por parte de los navegadores ha requerido un largo periodo de tiempo. El mismo año que se publicó CSS 1, Microsoft lanzaba su navegador Internet Explorer 3.0, que disponía de un soporte bastante reducido de CSS. El primer navegador con soporte completo de CSS 1 fue la versión para Mac de Internet Explorer 5, que se publicó en el año 2000. Por el momento, ningún navegador tiene soporte completo de CSS 2.1.</p>
 
 </div>
-<div  style="">
+<div  >
     <img style="width: 300px; margin-left: 20px;" src="imagecss.png" alt="" >
     <p style="font-family: 'Times New Roman', Times, serif; color: black;"> Estructura Basica Sintaxis CSS [Imagen.] Recuperado de https://www.silocreativo.com/que-es-css/ </p>
     </div>
